@@ -1,6 +1,5 @@
 package org.safety.library.RolesPrivilegesMap;
 
-import org.safety.library.initializationModule.Exceptions.AddPrivillegeRowNotFoundException;
 import org.safety.library.initializationModule.Exceptions.RoleForUserNotFoundException;
 import org.safety.library.initializationModule.utils.DatabaseWrappers;
 import org.safety.library.initializationModule.utils.PrivilegesReader;
@@ -13,18 +12,20 @@ import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class RolesPrivilegesMap {
-    private final DatabaseWrappers databaseWrappers = new DatabaseWrappers();
+    private final DatabaseWrappers databaseWrappers;
 
-    private final List <AccessListRow> privileges;
-    private List<AccessListRow> filteredList;
-    private boolean canCreate;
+    private final List<AccessListRow> privileges;
+    private final List<AccessListRow> filteredList;
     private Role concreteRole = null;
+    private boolean canCreate;
 
-    public RolesPrivilegesMap(String tableName) {
+
+    public RolesPrivilegesMap(DatabaseWrappers databaseWrappers, String tableName) {
+        this.databaseWrappers = databaseWrappers;
         initConcreteRole();
-        instantiateCanCrate(tableName);
+        instantiateCanCreate(tableName);
         this.privileges = this.databaseWrappers.getAccessForRole(this.concreteRole);
-        filterList(tableName);
+        this.filteredList = filterList(tableName);
     }
 
     private void initConcreteRole() {
@@ -36,10 +37,10 @@ public class RolesPrivilegesMap {
     }
 
 
-    private void instantiateCanCrate(String tableName) {
+    private void instantiateCanCreate(String tableName) {
         List<AddPrivilege> addPrivilegeList = databaseWrappers.getAddPrivilege(this.concreteRole);
         for (AddPrivilege addPrivilege : addPrivilegeList) {
-            if(addPrivilege.getTableName().equals(tableName)) {
+            if(addPrivilege.getTableName().equalsIgnoreCase(tableName)) {
                 this.canCreate = true;
                 return;
             }
@@ -47,13 +48,25 @@ public class RolesPrivilegesMap {
         this.canCreate = false;
     }
 
-    private void filterList(String entityName) {
+    private List<AccessListRow> filterList(String tableName) {
         Stream<AccessListRow> accessListRowStream = this.privileges.stream();
-        accessListRowStream
-                .filter(accessListRow -> (accessListRow.isCanRead()))
-                .filter(accessListRow -> accessListRow.getTableName().equals(entityName))
-                .filter(accessListRow -> accessListRow.getRole() == this.concreteRole);
-        this.filteredList = accessListRowStream.collect(Collectors.toList());
+        System.out.println(this.concreteRole.getName());
+        return accessListRowStream
+                .filter(AccessListRow::isCanRead)
+                .filter(accessListRow -> accessListRow.getTableName().equalsIgnoreCase(tableName))
+                .filter(accessListRow -> accessListRow.getRole().getName().equals(this.concreteRole.getName()))
+                .collect(Collectors.toList());
+    }
+
+    public AccessListRow getRowPrivilegesById(Long id) {
+        Stream<AccessListRow> filteredListRowStream = this.filteredList.stream();
+        List<AccessListRow> filteredList = filteredListRowStream
+                .filter(accessListRow -> (accessListRow.getProtectedDataId() == id)).toList();
+
+        if(filteredList.size() != 1){
+            throw new IllegalArgumentException();
+        }
+        return filteredList.get(0);
     }
 
     public List<AccessListRow> getFilteredList() {
@@ -66,5 +79,13 @@ public class RolesPrivilegesMap {
 
     public boolean canCreate() {
         return this.canCreate;
+    }
+
+    @Override
+    public String toString() {
+        return "RolesPrivilegesMap{" +
+                "privileges=" + privileges +
+                ", filteredList=" + filteredList +
+                '}';
     }
 }
